feat: alteracao para status do pagamento